# purdue-events

./: README.md
purdue-events/: package-lock.json  package.json
purdue-events-backend/: analyze-ig.py  get_ig_imgs.py  ocr-ig-img.py  pyproject.toml  scrape-bl.py
